# kotlin-dpp

./: .gitignore  Cargo.toml  README.md  build.rs
src/: dpp.udl  lib.rs
src/uniffi/kotlin_dpp/: kotlin_dpp.kt
