[package]
name = "kotlin-dpp"
version = "0.1.0"
edition = "2021"

[lib]
name = "dpp"
crate-type = ["cdylib"]

[dependencies]
dpp = { path = "../rs-dpp", default-features = false }
uniffi = { version = "0.23.0" }

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

#[[bin]]
#name = "uniffi-bindgen"
#path = "uniffi-bindgen.rs"